--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "biblionaire",
-  "version": "0.0.0",
+  "version": "1.0.5",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "yarn run generate && ng serve --open",
@@ -8,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "generate": "node generator.js"
+    "generate": "node generator.js",
+    "pack": "electron-packager ./dist/biblionaire/ --asar --icon=./src/favicon.ico --overwrite"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +42,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "electron": "^10.1.4",
+    "electron-packager": "^15.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
