--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "biblionaire",
+  "author": "Christiam Mena",
   "version": "1.0.5",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "yarn run generate && ng serve --open",
-    "build": "yarn run generate && ng build",
+    "build": "yarn run generate && ng build --prod=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "generate": "node generator.js",
-    "pack": "electron-packager ./dist/biblionaire/ --asar --icon=./src/favicon.ico --overwrite"
+    "packager": "yarn build && electron-packager ./ --asar --icon=./dist/favicon.ico --overwrite --ignore=^/src --ignore=^/node_modules"
   },
   "private": true,
   "dependencies": {
@@ -42,7 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "electron": "^10.1.4",
+    "electron": "^10.1.5",
     "electron-packager": "^15.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
