--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "yarn run generate && ng serve --open",
-    "build": "yarn run generate && ng build --prod=true",
+    "build": "yarn run generate && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
